--- a/package.json
+++ b/package.json
@@ -1,53 +1,54 @@
 {
-  "name": "angular-point",
-  "version": "0.0.1",
-  "dependencies": {},
-  "devDependencies": {
-    "bower": "~1",
-    "grunt": "^0.4.4",
-    "grunt-angular-templates": "^0.5.4",
-    "grunt-autoprefixer": "~0.7",
-    "grunt-concurrent": "~0.5",
-    "grunt-contrib-clean": "~0.5",
-    "grunt-contrib-concat": "~0.4",
-    "grunt-contrib-connect": "~0.7",
-    "grunt-contrib-copy": "~0.5",
-    "grunt-contrib-cssmin": "~0.9",
-    "grunt-contrib-htmlmin": "~0.2",
-    "grunt-contrib-imagemin": "~0.7",
-    "grunt-contrib-jshint": "~0.8",
-    "grunt-contrib-uglify": "~0.4",
-    "grunt-contrib-watch": "~0.6",
+    "name": "angular-point",
+    "version": "0.0.1",
+    "dependencies": {},
+    "devDependencies": {
+        "bower": "~1",
+        "grunt": "^0.4.4",
+        "grunt-angular-templates": "^0.5.4",
+        "grunt-autoprefixer": "~0.7",
+        "grunt-concurrent": "~0.5",
+        "grunt-contrib-clean": "~0.5",
+        "grunt-contrib-concat": "~0.4",
+        "grunt-contrib-connect": "~0.7",
+        "grunt-contrib-copy": "~0.5",
+        "grunt-contrib-cssmin": "~0.9",
+        "grunt-contrib-htmlmin": "~0.2",
+        "grunt-contrib-imagemin": "~0.7",
+        "grunt-contrib-jshint": "~0.8",
+        "grunt-contrib-uglify": "~0.4",
+        "grunt-contrib-watch": "~0.6",
+        "grunt-gh-pages": "~0.9",
 
-    "grunt-karma": "~0.8",
-    "grunt-newer": "~0.6",
-    "grunt-ngdocs": "~0.2.2",
-    "grunt-ngmin": "~0.0",
-    "grunt-rev": "~0.1",
-    "grunt-svgmin": "~0.4",
-    "grunt-usemin": "~2",
-    "karma": "~0.12",
-    "karma-chrome-launcher": "~0.1",
-    "karma-firefox-launcher": "~0.1",
-    "karma-html2js-preprocessor": "~0.1",
-    "karma-jasmine": "~0.2",
-    "karma-ng-html2js-preprocessor": "~0.1",
-    "karma-ng-scenario": "~0.1",
-    "karma-phantomjs-launcher": "~0.1.2",
-    "karma-requirejs": "~0.2",
-    "karma-script-launcher": "~0.1",
-    "load-grunt-tasks": "~0.4",
-    "lodash": "~2.4.1",
-    "time-grunt": "~0.2"
-  },
-  "engines": {
-    "node": ">=0.10.0"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/scatcher/angular-point.git"
-  },
-  "scripts": {
-    "test": "grunt test"
-  }
+        "grunt-karma": "~0.8",
+        "grunt-newer": "~0.6",
+        "grunt-ngdocs": "~0.2.2",
+        "grunt-ngmin": "~0.0",
+        "grunt-rev": "~0.1",
+        "grunt-svgmin": "~0.4",
+        "grunt-usemin": "~2",
+        "karma": "~0.12",
+        "karma-chrome-launcher": "~0.1",
+        "karma-firefox-launcher": "~0.1",
+        "karma-html2js-preprocessor": "~0.1",
+        "karma-jasmine": "~0.2",
+        "karma-ng-html2js-preprocessor": "~0.1",
+        "karma-ng-scenario": "~0.1",
+        "karma-phantomjs-launcher": "~0.1.2",
+        "karma-requirejs": "~0.2",
+        "karma-script-launcher": "~0.1",
+        "load-grunt-tasks": "~0.4",
+        "lodash": "~2.4.1",
+        "time-grunt": "~0.2"
+    },
+    "engines": {
+        "node": ">=0.10.0"
+    },
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/scatcher/angular-point.git"
+    },
+    "scripts": {
+        "test": "grunt test"
+    }
 }
