--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "angular-point",
-    "version": "0.0.2",
+    "version": "0.0.3",
     "dependencies": {},
     "devDependencies": {
         "bower": "^1",
@@ -18,6 +18,7 @@
         "grunt-contrib-jshint": "^0.10",
         "grunt-contrib-uglify": "^0.5",
         "grunt-contrib-watch": "^0.6",
+        "grunt-bump": "^0.0.14",
         "grunt-gh-pages": "^0.9",
         "grunt-karma": "^0.8",
         "grunt-newer": "^0.7",
