--- a/bower.json
+++ b/bower.json
@@ -22,12 +22,7 @@
         "angular-sanitize": "~1.2",
         "angular-mocks": "~1.2",
         "angular-resource": "~1.2",
-        "angular-bootstrap": "~0.11",
-        "chance": "latest",
-        "respond": "latest",
-        "es5-shim": "~2.3.0",
-        "ExplorerCanvas": "latest",
-        "json3": "~3"
+        "angular-bootstrap": "~0.11"
     },
     "ignore": [
         "**/.*",
