--- a/package.json
+++ b/package.json
@@ -1,83 +1,87 @@
 {
-    "name": "angular-point",
-    "version": "0.0.3",
-    "dependencies": {},
-    "devDependencies": {
-        "bower": "^1",
-        "grunt": "^0.4.4",
-        "grunt-angular-templates": "^0.5.4",
-        "grunt-autoprefixer": "^0.8.1",
-        "grunt-concurrent": "^0.5",
-        "grunt-contrib-clean": "^0.5",
-        "grunt-contrib-concat": "^0.4",
-        "grunt-contrib-connect": "^0.8",
-        "grunt-contrib-copy": "^0.5",
-        "grunt-contrib-cssmin": "^0.10",
-        "grunt-contrib-htmlmin": "^0.3",
-        "grunt-contrib-imagemin": "^0.7",
-        "grunt-contrib-jshint": "^0.10",
-        "grunt-contrib-uglify": "^0.5",
-        "grunt-contrib-watch": "^0.6",
-        "grunt-bump": "^0.0.14",
-        "grunt-gh-pages": "^0.9",
-        "grunt-karma": "^0.8",
-        "grunt-newer": "^0.7",
-        "grunt-ng-annotate": "^0.2.3",
-        "grunt-ngdocs": "^0.2",
-        "grunt-rev": "^0.1",
-        "grunt-svgmin": "^0.4",
-        "grunt-usemin": "^2",
-        "karma": "^0.12",
-        "karma-chrome-launcher": "^0.1",
-        "karma-firefox-launcher": "^0.1",
-        "karma-html2js-preprocessor": "^0.1",
-        "karma-jasmine": "^0.2",
-        "karma-ng-html2js-preprocessor": "^0.1",
-        "karma-ng-scenario": "^0.1",
-        "karma-phantomjs-launcher": "^0.1.2",
-        "karma-requirejs": "^0.2",
-        "karma-script-launcher": "^0.1",
-        "load-grunt-tasks": "^0.6",
-        "lodash": "^2.4.1",
-        "time-grunt": "^0.4"
-    },
-    "engines": {
-        "node": ">=0.10.0"
-    },
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/scatcher/angular-point.git"
-    },
-    "scripts": {
-        "test": "grunt test"
-    },
-    "jshintConfig": {
-        "node": true,
-        "browser": true,
-        "esnext": true,
-        "bitwise": true,
-        "camelcase": true,
-        "curly": true,
-        "eqeqeq": true,
-        "immed": true,
-        "indent": 2,
-        "latedef": true,
-        "newcap": true,
-        "noarg": true,
-        "quotmark": "single",
-        "regexp": true,
-        "undef": true,
-        "unused": true,
-        "strict": true,
-        "trailing": true,
-        "smarttabs": true,
-        "globals": {
-            "angular": false,
-            "_": false,
-            "moment": false,
-            "$": false,
-            "jQuery": false
-        }
+  "name": "angular-point",
+  "version": "0.0.3",
+  "dependencies": {},
+  "devDependencies": {
+    "bower": "^1",
+    "canonical-path": "0.0.2",
+    "dgeni": "^0.4.0-beta.1",
+    "dgeni-packages": "^0.10.0-beta.1",
+    "grunt": "^0.4.4",
+    "grunt-angular-templates": "^0.5.4",
+    "grunt-autoprefixer": "^0.8.1",
+    "grunt-bump": "^0.0.14",
+    "grunt-concurrent": "^0.5",
+    "grunt-contrib-clean": "^0.5",
+    "grunt-contrib-concat": "^0.4",
+    "grunt-contrib-connect": "^0.8",
+    "grunt-contrib-copy": "^0.5",
+    "grunt-contrib-cssmin": "^0.10",
+    "grunt-contrib-htmlmin": "^0.3",
+    "grunt-contrib-imagemin": "^0.7",
+    "grunt-contrib-jshint": "^0.10",
+    "grunt-contrib-uglify": "^0.5",
+    "grunt-contrib-watch": "^0.6",
+    "grunt-gh-pages": "^0.9",
+    "grunt-jsdoc": "^0.5.6",
+    "grunt-karma": "^0.8",
+    "grunt-newer": "^0.7",
+    "grunt-ng-annotate": "^0.2.3",
+    "grunt-ngdocs": "^0.2",
+    "grunt-rev": "^0.1",
+    "grunt-svgmin": "^0.4",
+    "grunt-usemin": "^2",
+    "karma": "^0.12",
+    "karma-chrome-launcher": "^0.1",
+    "karma-coverage": "^0.2.6",
+    "karma-firefox-launcher": "^0.1",
+    "karma-html2js-preprocessor": "^0.1",
+    "karma-jasmine": "^0.2",
+    "karma-ng-html2js-preprocessor": "^0.1",
+    "karma-ng-scenario": "^0.1",
+    "karma-phantomjs-launcher": "^0.1.2",
+    "karma-requirejs": "^0.2",
+    "karma-script-launcher": "^0.1",
+    "load-grunt-tasks": "^0.6",
+    "lodash": "^2.4.1",
+    "time-grunt": "^0.4"
+  },
+  "engines": {
+    "node": ">=0.10.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/scatcher/angular-point.git"
+  },
+  "scripts": {
+    "test": "grunt test"
+  },
+  "jshintConfig": {
+    "node": true,
+    "browser": true,
+    "esnext": true,
+    "bitwise": true,
+    "camelcase": true,
+    "curly": true,
+    "eqeqeq": true,
+    "immed": true,
+    "indent": 2,
+    "latedef": true,
+    "newcap": true,
+    "noarg": true,
+    "quotmark": "single",
+    "regexp": true,
+    "undef": true,
+    "unused": true,
+    "strict": true,
+    "trailing": true,
+    "smarttabs": true,
+    "globals": {
+      "angular": false,
+      "_": false,
+      "moment": false,
+      "$": false,
+      "jQuery": false
     }
-
+  }
 }
