--- a/bower.json
+++ b/bower.json
@@ -22,7 +22,7 @@
         "angular-sanitize": "~1.2",
         "angular-mocks": "~1.2",
         "angular-resource": "~1.2",
-        "angular-ui-bootstrap": "^0.11"
+        "angular-bootstrap": "^0.11"
     },
     "ignore": [
         "**/.*",
