Attempting to bring in the SOAP payload construction of SPServices.  This will allow us to exclusively use $http for all requests while also reducing build size.

--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "karma-script-launcher": "^0.1",
     "load-grunt-tasks": "^0.6",
     "lodash": "^2.4.1",
-    "time-grunt": "^0.4"
+    "time-grunt": "^0.4",
+    "coveralls": "^2.11.1"
   },
   "engines": {
     "node": ">=0.10.0"
