--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
     "angular-point-xml-parser": "latest",
     "bower": "^1",
     "canonical-path": "0.0.2",
-    "coveralls": "^2.11.1",
     "grunt": "^0.4.5",
     "grunt-angular-templates": "^0.5.7",
     "grunt-autoprefixer": "^1.0.1",
@@ -31,20 +30,16 @@
     "grunt-rev": "^0.1",
     "grunt-svgmin": "^1.0",
     "grunt-usemin": "^2",
-    "karma": "^0.12",
+    "karma": "~0.10",
+    "karma-jasmine": "~0.2.0",
     "karma-chrome-launcher": "^0.1",
     "karma-coverage": "^0.2.6",
-    "karma-firefox-launcher": "^0.1",
     "karma-html2js-preprocessor": "^0.1",
-    "karma-jasmine": "^0.2.2",
     "karma-ng-html2js-preprocessor": "^0.1",
     "karma-ng-scenario": "^0.1",
     "karma-phantomjs-launcher": "^0.1.4",
-    "karma-requirejs": "^0.2",
     "karma-script-launcher": "^0.1",
     "load-grunt-tasks": "^0.6",
-    "lodash": "^2.4.1",
-    "q": "^1.0.1",
     "time-grunt": "^1.0"
   },
   "engines": {
