--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "grunt-rev": "^0.1",
     "grunt-svgmin": "^1.0",
     "grunt-usemin": "^2",
-    "karma": "~0.10",
+    "karma": "^0.10",
     "karma-jasmine": "~0.2.0",
     "karma-chrome-launcher": "^0.1",
     "karma-coverage": "^0.2.6",
