--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "angular-point",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "dependencies": {},
   "devDependencies": {
     "angular-point-xml-parser": "latest",
@@ -17,28 +17,21 @@
     "grunt-contrib-copy": "^0.6",
     "grunt-contrib-cssmin": "^0.10",
     "grunt-contrib-htmlmin": "^0.3",
-    "grunt-contrib-imagemin": "^0.8",
     "grunt-contrib-jshint": "^0.10",
     "grunt-contrib-uglify": "^0.6",
     "grunt-contrib-watch": "^0.6",
-    "grunt-gh-pages": "^0.9",
-    "grunt-jsdoc": "^0.5.7",
-    "grunt-karma": "^0.9",
+    "grunt-gh-pages": "^0.9.1",
+    "grunt-karma": "^0.9.0",
     "grunt-newer": "^0.7",
     "grunt-ng-annotate": "^0.4.0",
     "grunt-ngdocs": "^0.2",
     "grunt-rev": "^0.1",
     "grunt-svgmin": "^1.0",
     "grunt-usemin": "^2",
-    "karma": "^0.10",
-    "karma-jasmine": "~0.2.0",
-    "karma-chrome-launcher": "^0.1",
-    "karma-coverage": "^0.2.6",
-    "karma-html2js-preprocessor": "^0.1",
-    "karma-ng-html2js-preprocessor": "^0.1",
-    "karma-ng-scenario": "^0.1",
+    "karma": "^0.12.23",
+    "karma-chrome-launcher": "^0.1.4",
+    "karma-jasmine": "^0.2.2",
     "karma-phantomjs-launcher": "^0.1.4",
-    "karma-script-launcher": "^0.1",
     "load-grunt-tasks": "^0.6",
     "time-grunt": "^1.0"
   },
