--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ node_js:
   - "0.10"
 before_install:
 - export DISPLAY=:99.0
+- npm prune
 - npm install -qg bower grunt-cli
 - npm install -q
 - bower install --force
