--- a/bower.json
+++ b/bower.json
@@ -1,30 +1,30 @@
 {
-    "name": "angular-point",
-    "version": "1.0.3",
-    "homepage": "https://github.com/scatcher/angular-point",
-    "authors": [
-        "Scott <github@scotthatcher.com>"
-    ],
-    "distPath": "dist",
-    "description": "Shared components of AngularPoint.",
-    "license": "MIT",
-    "main": "./dist/angular-point.min.js",
-    "dependencies": {
-        "angular": "~1.2.23",
-        "angular-toastr": "latest",
-        "chance": "latest",
-        "jquery": "~1.11",
-        "lodash": "~2.4",
-        "lodash-deep": "^1.2.1"
-    },
-    "devDependencies": {
-        "angular-sanitize": "~1.2.23",
-        "angular-mocks": "~1.2.23",
-        "angular-bootstrap": "^0.11"
-    },
-    "ignore": [
-        "**/.*",
-        "node_modules",
-        "bower_components"
-    ]
+  "name": "angular-point",
+  "version": "1.0.4",
+  "homepage": "https://github.com/scatcher/angular-point",
+  "authors": [
+    "Scott <github@scotthatcher.com>"
+  ],
+  "distPath": "dist",
+  "description": "Shared components of AngularPoint.",
+  "license": "MIT",
+  "main": "./dist/angular-point.min.js",
+  "dependencies": {
+    "angular": "~1.2.23",
+    "angular-toastr": "^0.4.0",
+    "jquery": "~1.11",
+    "lodash": "^2.4.1",
+    "lodash-deep": "^1.4.2"
+  },
+  "devDependencies": {
+    "angular-sanitize": "~1.2.23",
+    "angular-mocks": "~1.2.23",
+    "angular-bootstrap": "^0.11",
+    "chance": "^0.6.1"
+  },
+  "ignore": [
+    "**/.*",
+    "node_modules",
+    "bower_components"
+  ]
 }
