--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "angular-point",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "dependencies": {},
   "devDependencies": {
     "angular-point-xml-parser": "latest",
@@ -8,28 +8,23 @@
     "canonical-path": "0.0.2",
     "grunt": "^0.4.5",
     "grunt-angular-templates": "^0.5.7",
-    "grunt-autoprefixer": "^1.0.1",
     "grunt-bump": "^0.0.15",
     "grunt-concurrent": "^1.0",
     "grunt-contrib-clean": "^0.6",
     "grunt-contrib-concat": "^0.5",
     "grunt-contrib-connect": "^0.8",
     "grunt-contrib-copy": "^0.6",
-    "grunt-contrib-cssmin": "^0.10",
     "grunt-contrib-htmlmin": "^0.3",
     "grunt-contrib-jshint": "^0.10",
     "grunt-contrib-uglify": "^0.6",
     "grunt-contrib-watch": "^0.6",
     "grunt-gh-pages": "^0.9.1",
     "grunt-karma": "^0.9.0",
-    "grunt-newer": "^0.7",
     "grunt-ng-annotate": "^0.4.0",
     "grunt-ngdocs": "^0.2",
-    "grunt-rev": "^0.1",
-    "grunt-svgmin": "^1.0",
-    "grunt-usemin": "^2",
     "karma": "^0.12.23",
     "karma-chrome-launcher": "^0.1.4",
+    "karma-coverage": "^0.2.6",
     "karma-jasmine": "^0.2.2",
     "karma-phantomjs-launcher": "^0.1.4",
     "load-grunt-tasks": "^0.6",
