--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,10 @@
 language: node_js
 node_js:
-  - "0.11"
   - "0.10"
+  - "0.11"
 before_install:
 - export DISPLAY=:99.0
 - npm prune
-- npm install -qg bower grunt-cli
+- npm install -qg bower grunt-cli npm@2
 - npm install -q
-- bower install --force
 - bower install --force
