--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,6 @@ node_js:
 before_install:
 - export DISPLAY=:99.0
 - npm prune
-- npm install -qg bower grunt-cli npm@2
+- npm install -qg bower grunt-cli
 - npm install -q
 - bower install --force
