--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "angular-point",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "dependencies": {},
   "devDependencies": {
     "angular-point-xml-parser": "latest",
@@ -39,7 +39,7 @@
     "url": "https://github.com/scatcher/angular-point.git"
   },
   "scripts": {
-    "test": "grunt test"
+    "test": "./node_modules/karma/bin/karma start --single-run"
   },
   "jshintConfig": {
     "bitwise": true,
