Attempt to use UTC dates in mock to avoid failing travis tests with geographically diverse serve locals.

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,3 +6,6 @@ before_install:
 - npm install -qg bower grunt-cli
 - npm install -q
 - bower install --force
+before_script:
+  - echo 'Canada/Pacific' | sudo tee /etc/timezone
+  - sudo dpkg-reconfigure --frontend noninteractive tzdata
