--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "angular-point",
-  "version": "1.2.1",
+  "version": "1.2.2",
   "homepage": "https://github.com/scatcher/angular-point",
   "authors": [
     "Scott <github@scotthatcher.com>"
@@ -10,15 +10,14 @@
   "license": "MIT",
   "main": "./dist/angular-point.min.js",
   "dependencies": {
-    "angular": "~1.2.23",
+    "angular": "^1.2.26",
     "angular-toastr": "^0.4.0",
     "jquery": "~1.11",
     "lodash": "^2.4.1",
     "lodash-deep": "^1.4.2"
   },
   "devDependencies": {
-    "angular-sanitize": "~1.2.23",
-    "angular-mocks": "~1.2.23",
+    "angular-mocks": "^1.2.26",
     "angular-bootstrap": "^0.11",
     "chance": "^0.6.1"
   },
