--- a/package.json
+++ b/package.json
@@ -1,32 +1,48 @@
 {
   "name": "angular-point",
-  "version": "1.2.3",
+  "description": "A library designed to allow Angular to work with SharePoint lists using SOAP web services.",
+  "authors": [
+    "Scott <angular-point@scotthatcher.com>"
+  ],
+  "license": "MIT",
+  "homepage": "https://github.com/scatcher/angular-point",
+  "version": "1.2.4",
+  "module": "angularPoint",
   "dependencies": {},
   "devDependencies": {
     "angular-point-xml-parser": "latest",
-    "canonical-path": "0.0.2",
-    "grunt-angular-templates": "^0.5.7",
-    "grunt-bump": "^0.3.0",
-    "grunt-concurrent": "^1.0",
-    "grunt-contrib-clean": "^0.6",
-    "grunt-contrib-concat": "^0.5",
-    "grunt-contrib-connect": "^0.9",
-    "grunt-contrib-copy": "^0.8",
-    "grunt-contrib-htmlmin": "^0.4",
-    "grunt-contrib-jshint": "^0.11",
-    "grunt-contrib-uglify": "^0.8",
-    "grunt-contrib-watch": "^0.6",
-    "grunt-gh-pages": "^0.10.0",
-    "grunt-karma": "^0.10.1",
-    "grunt-ng-annotate": "^0.10.0",
-    "grunt-ngdocs": "^0.2",
+    "del": "^0.1.3",
+    "gulp": "^3.8.11",
+    "gulp-bump": "^0.1.11",
+    "gulp-bytediff": "^0.2.0",
+    "gulp-concat": "^2.5.1",
+    "gulp-filter": "^2.0.2",
+    "gulp-gh-pages": "^0.4.0",
+    "gulp-git": "^1.0.0",
+    "gulp-header": "^1.2.2",
+    "gulp-if": "^1.2.5",
+    "gulp-inject": "^1.0.1",
+    "gulp-jscs": "^1.1.2",
+    "gulp-jshint": "^1.7.1",
+    "gulp-load-plugins": "^0.7.1",
+    "gulp-ng-annotate": "^0.3.2",
+    "gulp-ngdocs": "^0.2.10",
+    "gulp-plumber": "^0.6.6",
+    "gulp-print": "^1.1.0",
+    "gulp-tag-version": "^1.2.1",
+    "gulp-task-listing": "^1.0.0",
+    "gulp-uglify": "^1.0.1",
+    "gulp-util": "^3.0.2",
+    "jshint-stylish": "^1.0.0",
     "karma": "^0.12.31",
     "karma-chrome-launcher": "^0.1.7",
     "karma-coverage": "^0.2.7",
     "karma-jasmine": "^0.3.5",
     "karma-phantomjs-launcher": "^0.1.4",
-    "load-grunt-tasks": "^3.1",
-    "time-grunt": "^1.0"
+    "lodash": "^2.4.1",
+    "phantomjs": "1.9.9",
+    "plato": "^1.2.0",
+    "yargs": "^1.3.3"
   },
   "engines": {
     "node": ">=0.10.0"
@@ -36,7 +52,9 @@
     "url": "https://github.com/scatcher/angular-point.git"
   },
   "scripts": {
-    "test": "grunt test"
+    "init": "npm install",
+    "install": "bower install",
+    "test": "gulp test"
   },
   "jshintConfig": {
     "bitwise": true,
