--- a/package.json
+++ b/package.json
@@ -11,8 +11,12 @@
   "dependencies": {},
   "devDependencies": {
     "angular-point-xml-parser": "latest",
+    "babel": "^4.4.5",
+    "babelify": "^5.0.3",
     "del": "^0.1.3",
     "gulp": "^3.8.11",
+    "gulp-babel": "^4.0.0",
+    "gulp-browserify": "^0.5.1",
     "gulp-bump": "^0.1.11",
     "gulp-bytediff": "^0.2.0",
     "gulp-concat": "^2.5.1",
@@ -29,6 +33,7 @@
     "gulp-ngdocs": "^0.2.10",
     "gulp-plumber": "^0.6.6",
     "gulp-print": "^1.1.0",
+    "gulp-sourcemaps": "^1.3.0",
     "gulp-tag-version": "^1.2.1",
     "gulp-task-listing": "^1.0.0",
     "gulp-uglify": "^1.0.1",
