--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "lodash": "^2.4.1",
     "phantomjs": "1.9.9",
     "plato": "^1.2.0",
+    "traceur": "0.0.85",
     "yargs": "^1.3.3"
   },
   "engines": {
