--- a/package.json
+++ b/package.json
@@ -1,33 +1,34 @@
 {
-  "name": "angular-point",
-  "description": "A library designed to allow Angular to work with SharePoint lists using SOAP web services.",
-  "authors": [
-    "Scott <angular-point@scotthatcher.com>"
-  ],
-  "license": "MIT",
-  "homepage": "https://github.com/scatcher/angular-point",
-  "version": "3.0.2",
-  "module": "angularPoint",
-  "dependencies": {},
-  "devDependencies": {
-    "angular-point-tools": "^2.0.1",
-    "gulp": "^3.8.11",
-      "gulp-concat": "^2.5.2",
-    "gulp-sourcemaps": "^1.5.2",
-    "gulp-typescript": "^2.6.0",
-    "merge2": "^0.3.5",
-    "typescript": "^1.5.0-alpha"
-  },
-  "engines": {
-    "node": ">=0.12.0"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/scatcher/angular-point.git"
-  },
-  "scripts": {
-    "init": "npm install",
-    "install": "bower install",
-    "test": "gulp test"
-  }
+    "name": "angular-point",
+    "description": "A library designed to allow Angular to work with SharePoint lists using SOAP web services.",
+    "authors": [
+        "Scott <angular-point@scotthatcher.com>"
+    ],
+    "license": "MIT",
+    "homepage": "https://github.com/scatcher/angular-point",
+    "version": "3.0.2",
+    "module": "angularPoint",
+    "dependencies": {},
+    "devDependencies": {
+        "angular-point-tools": "^2.0.1",
+        "gulp": "^3.8.11",
+        "gulp-concat": "^2.5.2",
+        "gulp-sourcemaps": "^1.5.2",
+        "gulp-typescript": "^2.6.0",
+        "merge2": "^0.3.5",
+        "typescript": "^1.5.0-alpha"
+    },
+    "engines": {
+        "node": ">=0.12.0"
+    },
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/scatcher/angular-point.git"
+    },
+    "scripts": {
+        "init": "npm install",
+        "install": "bower install",
+        "pretest": "gulp cacheXML",
+        "test": "gulp test"
+    }
 }
