--- a/bower.json
+++ b/bower.json
@@ -1,32 +1,32 @@
 {
-  "name": "angular-point",
-  "version": "3.0.2",
-  "homepage": "https://github.com/scatcher/angular-point",
-  "authors": [
-    "Scott <angular-point@scotthatcher.com>"
-  ],
-  "distPath": "dist",
-  "description": "Shared components of AngularPoint.",
-  "license": "MIT",
-  "main": "./dist/angular-point.min.js",
-  "dependencies": {
-    "angular": "^1.2.28",
-    "angular-toastr": "^0.4.0",
-    "jquery": "~1.11.1",
-    "lodash": "^3.3.0",
-    "lodash-deep": "^1.5.3"
-  },
-  "devDependencies": {
-    "angular-mocks": "^1.2.26",
-    "angular-bootstrap": "^0.12",
-    "chance": "^0.7.3"
-  },
-  "ignore": [
-    "**/.*",
-    "node_modules",
-    "bower_components"
-  ],
-  "resolutions": {
-    "angular": "^1.2.28"
-  }
+    "name": "angular-point",
+    "version": "3.0.3",
+    "homepage": "https://github.com/scatcher/angular-point",
+    "authors": [
+        "Scott <angular-point@scotthatcher.com>"
+    ],
+    "distPath": "dist",
+    "description": "Shared components of AngularPoint.",
+    "license": "MIT",
+    "main": "./dist/angular-point.min.js",
+    "dependencies": {
+        "angular": "^1.3",
+        "angular-toastr": "^1.1.0",
+        "jquery": "^2.1.3",
+        "lodash": "^3.6.0",
+        "lodash-deep": "^1.6.0"
+    },
+    "devDependencies": {
+        "angular-mocks": "^1.3",
+        "angular-bootstrap": "^0.12.1",
+        "chance": "^0.7.3"
+    },
+    "ignore": [
+        "**/.*",
+        "node_modules",
+        "bower_components"
+    ],
+    "resolutions": {
+        "angular": "^1.3"
+    }
 }
