--- a/package.json
+++ b/package.json
@@ -6,17 +6,17 @@
     ],
     "license": "MIT",
     "homepage": "https://github.com/scatcher/angular-point",
-    "version": "3.0.3",
+    "version": "3.0.4",
     "module": "angularPoint",
     "dependencies": {},
     "devDependencies": {
-        "angular-point-tools": "^2.0.1",
+        "angular-point-tools": "^2.0.8",
         "gulp": "^3.8.11",
         "gulp-concat": "^2.5.2",
         "gulp-sourcemaps": "^1.5.2",
-        "gulp-typescript": "^2.6.0",
+        "gulp-typescript": "^2.7.5",
         "merge2": "^0.3.5",
-        "typescript": "^1.5.0-alpha"
+        "typescript": "^1.5.0-beta"
     },
     "engines": {
         "node": ">=0.12.0"
