--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
     "name": "angular-point",
-    "version": "3.1.0",
+    "version": "3.1.1",
     "homepage": "https://github.com/scatcher/angular-point",
     "authors": [
         "Scott <angular-point@scotthatcher.com>"
@@ -10,14 +10,14 @@
     "license": "MIT",
     "main": "./dist/angular-point.min.js",
     "dependencies": {
-        "angular": "^1.3",
+        "angular": "^1.4",
         "angular-toastr": "^1.3.1",
         "jquery": "^2.1.3",
         "lodash": "^3.6.0",
         "lodash-deep": "^1.6.0"
     },
     "devDependencies": {
-        "angular-mocks": "^1.3",
+        "angular-mocks": "^1.4",
         "angular-bootstrap": "^0.12.1",
         "chance": "^0.7.3"
     },
@@ -27,6 +27,9 @@
         "bower_components"
     ],
     "resolutions": {
-        "angular": "^1.3"
+        "angular": "^1.4"
+    },
+    "typescript": {
+        "definition": "./typings/ap.d.ts"
     }
 }
