--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
     "name": "angular-point",
-    "version": "3.2.4",
+    "version": "3.2.5",
     "homepage": "https://github.com/scatcher/angular-point",
     "authors": [
         "Scott <angular-point@scotthatcher.com>"
@@ -8,7 +8,7 @@
     "distPath": "dist",
     "description": "Shared components of AngularPoint.",
     "license": "MIT",
-    "main": "./dist/angular-point.min.js",
+    "main": "./dist/angular-point.js",
     "dependencies": {
         "angular": "^1.4",
         "angular-toastr": "^1.3.1",
