--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
   ],
   "license": "MIT",
   "homepage": "https://github.com/scatcher/angular-point",
-  "version": "3.3.0",
+  "version": "3.4.0",
   "module": "angularPoint",
   "dependencies": {
-    "typescript": "^1.5.0-beta"
+    "typescript": "Microsoft/TypeScript"
   },
   "devDependencies": {
     "angular-point-tools": "^2.1.1",
@@ -18,7 +18,7 @@
     "gulp-sourcemaps": "^1.5.2",
     "gulp-typescript": "^2.7.7",
     "merge2": "^0.3.5",
-    "typescript": "^1.5.0-beta"
+    "typescript": "Microsoft/TypeScript"
   },
   "engines": {
     "node": ">=0.12.0"
