--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   ],
   "license": "MIT",
   "homepage": "https://github.com/scatcher/angular-point",
-  "version": "3.5.0",
+  "version": "3.5.1",
   "module": "angularPoint",
   "dependencies": {
     "typescript": "Microsoft/TypeScript"
@@ -16,8 +16,8 @@
     "gulp": "^3.9.0",
     "gulp-concat": "^2.5.2",
     "gulp-gh-pages": "^0.5.2",
+    "gulp-ngdocs": "^0.2.10",
     "gulp-sourcemaps": "^1.5.2",
-    "gulp-typedoc": "^1.1.0",
     "gulp-typescript": "^2.7.7",
     "merge2": "^0.3.5",
     "typescript": "Microsoft/TypeScript"
