--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
   ],
   "license": "MIT",
   "homepage": "https://github.com/scatcher/angular-point",
-  "version": "3.5.8",
+  "version": "3.6.0",
   "module": "angularPoint",
   "dependencies": {
-    "typescript": "1.5.0-beta"
+    "typescript": "1.5.3"
   },
   "devDependencies": {
     "angular-point-tools": "^2.2.2",
@@ -18,7 +18,7 @@
     "gulp-gh-pages": "^0.5.2",
     "gulp-ngdocs": "^0.2.13",
     "gulp-sourcemaps": "^1.5.2",
-    "gulp-typescript": "^2.7.8",
+    "gulp-typescript": "^2.8.0",
     "merge2": "^0.3.6"
   },
   "engines": {
