--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "gulp-ngdocs": "^0.2.13",
     "gulp-sourcemaps": "^1.5.2",
     "gulp-typescript": "^2.8.0",
-    "merge2": "^0.3.6"
+    "merge2": "^0.3.6",
+    "tslint": "^2.4.2"
   },
   "engines": {
     "node": ">=0.12.0"
