--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: node_js
-sudo: false
+# sudo: false
 node_js:
     - "0.12"
 before_install:
@@ -7,8 +7,8 @@ before_install:
     - npm install -qg bower gulp
     - npm install -q
 before_script:
-    # - echo 'Canada/Pacific' | sudo tee /etc/timezone
-    # - sudo dpkg-reconfigure --frontend noninteractive tzdata
+    - echo 'Canada/Pacific' | sudo tee /etc/timezone
+    - sudo dpkg-reconfigure --frontend noninteractive tzdata
 script:
     - gulp cacheXML
     - gulp gen-ts-refs
@@ -16,3 +16,4 @@ script:
 cache:
     directories:
         - node_modules
+        - bower_components
