--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
   ],
   "license": "MIT",
   "homepage": "https://github.com/scatcher/angular-point",
-  "version": "3.10.5",
+  "version": "3.10.6",
   "module": "angularPoint",
   "dependencies": {
-    "typescript": "1.5.3"
+    "typescript": "1.6.0-beta"
   },
   "devDependencies": {
     "angular-point-tools": "^2.3.4",
