--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
   "engines": {
     "node": ">=0.12.0"
   },
+    "typescript": {
+        "definition": "typings/app.d.ts"
+    }
   "repository": {
     "type": "git",
     "url": "https://github.com/scatcher/angular-point.git"
