--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
     "node": ">=0.12.0"
   },
     "typescript": {
-        "definition": "typings/app.d.ts"
-    }
+        "definition": "typings/ap.d.ts"
+    },
   "repository": {
     "type": "git",
     "url": "https://github.com/scatcher/angular-point.git"
