--- a/package.json
+++ b/package.json
@@ -6,28 +6,28 @@
   ],
   "license": "MIT",
   "homepage": "https://github.com/scatcher/angular-point",
-  "version": "3.10.10",
+  "version": "3.10.11",
   "module": "angularPoint",
   "dependencies": {
-    "typescript": "1.6.0-beta"
+    "typescript": "1.6.2"
   },
   "devDependencies": {
-    "angular-point-tools": "^2.3.4",
+    "angular-point-tools": "^2.3.5",
     "gulp": "^3.9.0",
     "gulp-concat": "^2.6.0",
     "gulp-gh-pages": "^0.5.2",
     "gulp-ngdocs": "^0.2.13",
     "gulp-sourcemaps": "^1.5.2",
-    "gulp-typescript": "^2.8.1",
+    "gulp-typescript": "^2.9.0",
     "merge2": "^0.3.6",
-    "tslint": "^2.4.5"
+    "tslint": "^2.5.0"
   },
   "engines": {
     "node": ">=0.12.0"
   },
-    "typescript": {
-        "definition": "typings/ap.d.ts"
-    },
+  "typescript": {
+    "definition": "typings/ap.d.ts"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/scatcher/angular-point.git"
