--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "angular-point",
-  "version": "3.10.14",
+  "version": "3.10.15",
   "homepage": "https://github.com/scatcher/angular-point",
   "authors": [
     "Scott <angular-point@scotthatcher.com>"
@@ -10,15 +10,16 @@
   "license": "MIT",
   "main": "./dist/angular-point.js",
   "dependencies": {
-    "angular": "^1.4.5",
+    "angular": "^1.4.7",
     "angular-toastr": "^1.5.0",
     "jquery": "^2.1.4",
     "lodash": "^3.10.1",
-    "lodash-deep": "^1.6.0"
+    "lodash-deep": "^1.6.0",
+    "error-stack-parser": "^1.2.3"
   },
   "devDependencies": {
-    "angular-mocks": "^1.4.5",
-    "chance": "^0.7.6"
+    "angular-mocks": "^1.4.7",
+    "chance": "^0.8.0"
   },
   "ignore": [
     "**/.*",
@@ -26,7 +27,7 @@
     "bower_components"
   ],
   "resolutions": {
-    "angular": "^1.4.5"
+    "angular": "^1.4.7"
   },
   "typescript": {
     "definition": "./typings/ap.d.ts"
