--- a/bower.json
+++ b/bower.json
@@ -19,7 +19,8 @@
   },
   "devDependencies": {
     "angular-mocks": "^1.5.0-beta.1",
-    "chance": "^0.8.0"
+    "chance": "^0.8.0",
+    "moment": "~2.10.6"
   },
   "ignore": [
     "**/.*",
