--- a/package.json
+++ b/package.json
@@ -6,11 +6,9 @@
   ],
   "license": "MIT",
   "homepage": "https://github.com/scatcher/angular-point",
-  "version": "3.10.15",
+  "version": "4.0.0",
   "module": "angularPoint",
-  "dependencies": {
-    "typescript": "^1.6.2"
-  },
+  "dependencies": {},
   "devDependencies": {
     "angular-point-tools": "^2.3.5",
     "gulp": "^3.9.0",
