--- a/bower.json
+++ b/bower.json
@@ -10,15 +10,13 @@
   "license": "MIT",
   "main": "./dist/angular-point.js",
   "dependencies": {
-    "angular": "^1.4.8",
     "jquery": "^2.1.4",
     "lodash": "^3.10.1",
     "error-stack-parser": "^1.3.1"
   },
   "devDependencies": {
     "angular-mocks": "^1.5.0-beta.1",
-    "chance": "^0.8.0",
-    "moment": "^2.10.6"
+    "chance": "^0.8.0"
   },
   "ignore": [
     "**/.*",
