--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "angular-point",
-  "version": "4.1.1",
+  "version": "4.2.0",
   "homepage": "https://github.com/scatcher/angular-point",
   "authors": [
     "Scott <angular-point@scotthatcher.com>"
@@ -10,15 +10,8 @@
   "license": "MIT",
   "main": "./dist/angular-point.js",
   "dependencies": {
-    "angular": "^1.4.8",
-    "jquery": "^2.1.4",
-    "lodash": "^3.10.1",
-    "error-stack-parser": "^1.3.1"
   },
   "devDependencies": {
-    "angular-mocks": "^1.5.0-beta.1",
-    "chance": "^0.8.0",
-    "moment": "^2.10.6"
   },
   "ignore": [
     "**/.*",
@@ -26,7 +19,7 @@
     "bower_components"
   ],
   "resolutions": {
-    "angular": "^1.4.8"
+    "angular": "~1.4.8"
   },
   "typescript": {
     "definition": "./typings/ap.d.ts"
