--- a/package.json
+++ b/package.json
@@ -6,9 +6,17 @@
   ],
   "license": "MIT",
   "homepage": "https://github.com/scatcher/angular-point",
-  "version": "4.1.1",
+  "version": "4.2.0",
+  "main": "index.js",
   "module": "angularPoint",
-  "dependencies": {},
+  "dependencies": {
+    "angular": "^1.4.8",
+    "angular-mocks": "^1.4.8",
+    "chance": "^0.8.0",
+    "error-stack-parser": "^1.3.3",
+    "jquery": "^2.2.0",
+    "lodash": "^4.0.0"
+  },
   "devDependencies": {
     "angular-point-tools": "^2.3.5",
     "gulp": "^3.9.0",
