Updated build info.

--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -4,13 +4,13 @@
     "declaration": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-//    "mapRoot": "",
+//    "mapRoot": "../",
     "module": "commonjs",
     "moduleResolution": "node",
     "noEmitOnError": true,
     "noImplicitAny": false,
     "outDir": "../dist/",
-//    "rootDir": ".",
+    "rootDir": ".",
     "sourceMap": true,
     "target": "es5",
     "inlineSources": true
