--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
     "Scott <angular-point@scotthatcher.com>"
   ],
   "homepage": "https://github.com/scatcher/angular-point",
-  "version": "5.0.0-alpha.1",
+  "version": "5.0.0-alpha.2",
   "license": "MIT",
   "angular-cli": {},
-  "main": "index.js",
+  "main": "./dist/index.js",
+  "typings": "./dist/index.d.ts",
   "scripts": {
     "clean": "rimraf dist",
     "start": "ng server",
