--- a/package.json
+++ b/package.json
@@ -5,27 +5,41 @@
     "Scott <angular-point@scotthatcher.com>"
   ],
   "homepage": "https://github.com/scatcher/angular-point",
-  "version": "5.0.0-alpha.4",
+  "version": "5.0.0",
   "license": "MIT",
   "angular-cli": {},
-  "main": "./src/index.ts",
+  "main": "dist/angular-point.js",
   "scripts": {
+    "build": "webpack"
   },
   "dependencies": {
     "angular": "~1.6.1",
     "error-stack-parser": "^1.3.1",
     "jquery": "^2.1.4",
     "lodash": "^4.17.4",
+    "moment": "^2.17.1",
     "toastr": "^2.1.2"
   },
   "devDependencies": {
     "@types/angular": "~1.5.19",
     "@types/core-js": "~0.9.35",
+    "@types/hammerjs": "^2.0.34",
     "@types/jasmine": "~2.5.40",
     "@types/lodash": "~4.14.45",
+    "@types/node": "^6.0.58",
     "@types/source-map": "~0.5.0",
     "@types/toastr": "^2.1.32",
-    "typescript": "~2.1.1"
+    "awesome-typescript-loader": "^3.0.0-beta.17",
+    "codelyzer": "^2.0.0-beta.4",
+    "compression-webpack-plugin": "^0.3.2",
+    "ng-annotate-loader": "^0.2.0",
+    "source-map-loader": "^0.1.5",
+    "ts-helpers": "^1.1.2",
+    "tslint": "^4.3.1",
+    "tslint-loader": "^3.3.0",
+    "typescript": "~2.1.1",
+    "webpack": "2.1.0-beta.27",
+    "webpack-node-externals": "^1.5.4"
   },
   "repository": {
     "type": "git",
