--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,20 +1,19 @@
 {
   "compilerOptions": {
-    "target": "es5",
     "noImplicitAny": false,
-    "noEmitHelpers": true,
-    "moduleResolution": "node",
-    "removeComments": true,
-    "sourceMap": true,
-    "module": "commonjs",
-    "allowSyntheticDefaultImports": true,
+    "module": "es2015",
+    "target": "es5",
+    "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "outDir": "out"
+    "declaration": true,
+    "moduleResolution": "node",
+    "types": [
+      "hammerjs",
+      "jasmine",
+      "node"
+    ],
+    "lib": ["es2015", "dom"]
   },
-  "lib": [
-    "es2015",
-    "dom"
-  ],
   "typeRoots": [
     "./node_modules/@types"
   ],
