--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,18 +4,11 @@
     "target": "es5",
     "noImplicitAny": false,
     "sourceMap": true,
-    "moduleResolution": "node",
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
-    "declaration": false,
-    "outDir": "dist/",
-    "lib": [
-      "es2015",
-      "dom"
-    ],
-    "types": [
-      "node"
-    ]
+    "declaration": true,
+    "moduleResolution": "node",
+    "lib": ["es2015", "dom"]
   },
   "typeRoots": [
     "./node_modules/@types"
