--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "Scott <angular-point@scotthatcher.com>"
   ],
   "homepage": "https://github.com/scatcher/angular-point",
-  "version": "5.0.4",
+  "version": "5.0.5",
   "license": "MIT",
   "angular-cli": {},
   "scripts": {
@@ -14,6 +14,7 @@
   "dependencies": {
     "angular": "~1.6.1",
     "error-stack-parser": "^1.3.1",
+    "jquery": "^2.2.4",
     "lodash": "^4.17.4",
     "moment": "^2.17.1",
     "toastr": "^2.1.2"
