--- a/package.json
+++ b/package.json
@@ -5,33 +5,34 @@
     "Scott <angular-point@scotthatcher.com>"
   ],
   "homepage": "https://github.com/scatcher/angular-point",
-  "version": "5.0.10",
+  "version": "5.0.11",
   "license": "MIT",
   "angular-cli": {},
   "scripts": {
     "build": "webpack"
   },
-  "dependencies": {
-    "angular": "~1.6.1",
+  "dependencies": {},
+  "peerDependencies": {
+    "angular": "~1.6.4",
     "error-stack-parser": "^1.3.1",
     "lodash": "^4.17.4",
     "toastr": "^2.1.2"
   },
   "devDependencies": {
-    "@types/angular": "~1.5.19",
-    "@types/core-js": "~0.9.35",
+    "@types/angular": "~1.6.17",
+    "@types/core-js": "~0.9.41",
     "@types/hammerjs": "^2.0.34",
-    "@types/jasmine": "~2.5.40",
-    "@types/lodash": "~4.14.45",
-    "@types/node": "^6.0.58",
+    "@types/jasmine": "~2.5.47",
+    "@types/lodash": "~4.14.64",
+    "@types/node": "^7.0.18",
     "@types/source-map": "~0.5.0",
-    "@types/toastr": "^2.1.32",
-    "awesome-typescript-loader": "^3.0.0-beta.17",
-    "tslint": "^4.3.1",
-    "tslint-loader": "^3.3.0",
-    "typescript": "~2.1.1",
-    "webpack": "2.1.0-beta.27",
-    "webpack-node-externals": "^1.5.4"
+    "@types/toastr": "^2.1.33",
+    "awesome-typescript-loader": "^3.1.3",
+    "tslint": "^5.2.0",
+    "tslint-loader": "^3.5.3",
+    "typescript": "~2.3.2",
+    "webpack": "2.5.1",
+    "webpack-node-externals": "^1.6.0"
   },
   "repository": {
     "type": "git",
