--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
         "Scott <angular-point@scotthatcher.com>"
     ],
     "homepage": "https://github.com/scatcher/angular-point",
-    "version": "6.5.1",
+    "version": "6.5.2",
     "license": "MIT",
     "angular-cli": {},
     "scripts": {
@@ -13,7 +13,7 @@
     },
     "dependencies": {},
     "peerDependencies": {
-        "angular": "~1.6.4",
+        "angular": "^1.6.4",
         "error-stack-parser": "^1.3.1",
         "lodash": "^4.17.4",
         "toastr": "^2.1.2"
